# MegaStore-Rust

./: .gitignore  Trabalho - Implementação de um Sistema de Recomendação de Produtos Utilizando Grafos.docx  populate_db.py
app/: __init__.py  models.py  views.py
app/static/css/: style.css
app/static/scripts/: scripts.js
app/templates/: index.html  produto.html
instance/: database.db
migrations/versions/: 7ffdbf634544_recriacao_do_banco_de_dados_antigo_.py  96be4dd3db3e_criacao_do_db_com_produtos_e_imagens.py
rust_recommender/: Cargo.toml
rust_recommender/src/: grafo.rs  lib.rs  main.rs  produto.rs  recomendador.rs
rust_recommender/tests/: integracao_sqlite.rs  recomendador_tests.rs
